- activated back-to-top & back-to-bottom - cleaned up item load & reduced overhead - changed intersection observation

--- a/index.html
+++ b/index.html
@@ -382,14 +382,14 @@
 			<div style="height:100%;" class="col-xs-12 col-lg-8">
 			  <div style="height:calc(100% + 20px);" class="card">
 				<h4 class="card-title ld-title-indent">Inventory</h4>
-				<div style="overflow-y: scroll; overflow-x: hidden; direction:rtl; margin-bottom:0px; display:" class="comment-widgets" id="root-box">
+				<div style="overflow-y: scroll; overflow-x: hidden; direction:rtl; margin-bottom:0px;" class="comment-widgets" id="root-box">
 				  <div id="loader" hidden>
 					<div class="d-flex flex-column" style="text-align: center; justify-content: center; align-items: center;">
 					  <h2>Loading Items</h2>
 					  <div class="d-flex ld-loader"></div>
 					</div>
 				  </div>
-				  <div style="direction:ltr" class="items-list" id="items-list"></div>
+				  <div style="direction:ltr;" class="items-list" id="items-list"></div>
 				  <div id="load-more"></div>
 				</div>
 			  </div>
