more fix and enabled exp/classic & sc/hc & ladder/non-ladder selection

--- a/index.html
+++ b/index.html
@@ -248,12 +248,12 @@
 						<!-- <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="charts.html" aria-expanded="false"><i class="mdi mdi-chart-bar"></i><span class="hide-menu">Profile Status</span></a></li> -->
 						<li class="sidebar-item">
 							<a class="sidebar-link ld-pad-top" aria-expanded="true">
-								<div disabled class="btn-group" id="game-type">
-									<button disabled
+								<div class="btn-group" id="game-type">
+									<button
 										class="btn btn-secondary ld-btn-side game-type game-type-Expansion waves-effect waves-dark">
 										Expansion
 									</button>
-									<button disabled
+									<button
 										class="btn btn-secondary ld-btn-side game-type game-type-Classic waves-effect waves-dark">
 										Classic
 									</button>
@@ -265,11 +265,11 @@
 						<li class="sidebar-item">
 							<a class="sidebar-link ld-sidebar-link" aria-expanded="true">
 								<div class="btn-group" id="game-type">
-									<button disabled
+									<button
 										class="btn btn-secondary ld-btn-side game-mode game-mode-Softcore waves-effect waves-dark">
 										Softcore
 									</button>
-									<button disabled
+									<button
 										class="btn btn-secondary ld-btn-side game-mode game-mode-Hardcore waves-effect waves-dark">
 										Hardcore
 									</button>
@@ -281,11 +281,11 @@
 						<li class="sidebar-item">
 							<a class="sidebar-link ld-sidebar-link" aria-expanded="true">
 								<div class="btn-group" id="game-type">
-									<button disabled
+									<button
 										class="btn btn-secondary ld-btn-side game-class game-class-Ladder waves-effect waves-dark">
 										Ladder
 									</button>
-									<button disabled
+									<button
 										class="btn btn-secondary ld-btn-side game-class game-class-NonLadder waves-effect waves-dark">
 										Non Ladder
 									</button>
