activate left sidebar

--- a/index.html
+++ b/index.html
@@ -342,11 +342,11 @@
 			  <!-- <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="charts.html" aria-expanded="false"><i class="mdi mdi-chart-bar"></i><span class="hide-menu">Profile Status</span></a></li> -->
 			  <li class="sidebar-item">
 				<a class="sidebar-link ld-pad-top" aria-expanded="true">
-				  <div disabled class="btn-group" id="game-type">
-					<button disabled class="btn btn-secondary ld-btn-side game-type game-type-Expansion waves-effect waves-dark">
+				  <div class="btn-group" id="game-type">
+					<button class="btn btn-secondary ld-btn-side game-type game-type-Expansion waves-effect waves-dark">
 					  Expansion
 					</button>
-					<button disabled class="btn btn-secondary ld-btn-side game-type game-type-Classic waves-effect waves-dark">
+					<button class="btn btn-secondary ld-btn-side game-type game-type-Classic waves-effect waves-dark">
 					  Classic
 					</button>
 				  </div>
@@ -357,10 +357,10 @@
 			  <li class="sidebar-item">
 				<a class="sidebar-link ld-sidebar-link" aria-expanded="true">
 				  <div class="btn-group" id="game-type">
-					<button disabled class="btn btn-secondary ld-btn-side game-mode game-mode-Softcore waves-effect waves-dark">
+					<button class="btn btn-secondary ld-btn-side game-mode game-mode-Softcore waves-effect waves-dark">
 					  Softcore
 					</button>
-					<button disabled class="btn btn-secondary ld-btn-side game-mode game-mode-Hardcore waves-effect waves-dark">
+					<button class="btn btn-secondary ld-btn-side game-mode game-mode-Hardcore waves-effect waves-dark">
 					  Hardcore
 					</button>
 				  </div>
@@ -371,10 +371,10 @@
 			  <li class="sidebar-item">
 				<a class="sidebar-link ld-sidebar-link" aria-expanded="true">
 				  <div class="btn-group" id="game-type">
-					<button disabled class="btn btn-secondary ld-btn-side game-class game-class-Ladder waves-effect waves-dark">
+					<button class="btn btn-secondary ld-btn-side game-class game-class-Ladder waves-effect waves-dark">
 					  Ladder
 					</button>
-					<button disabled class="btn btn-secondary ld-btn-side game-class game-class-NonLadder waves-effect waves-dark">
+					<button class="btn btn-secondary ld-btn-side game-class game-class-NonLadder waves-effect waves-dark">
 					  Non Ladder
 					</button>
 				  </div>
